# ChangeLog for net-libs/xrootd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/xrootd/ChangeLog,v 1.19 2014/06/19 18:13:17 bicatali Exp $

  01 Dec 2014; Justin Lecher <jlec@gentoo.org> xrootd-4.0.4.ebuild,
  metadata.xml:
  Use PATCHES

*xrootd-4.0.0 (19 Jun 2014)

  19 Jun 2014; Sébastien Fabbro <bicatali@gentoo.org> +xrootd-4.0.0.ebuild:
  Version bump

  11 Mar 2014; Patrick Lauer <patrick@gentoo.org> xrootd-3.3.6.ebuild:
  Whitespace

*xrootd-3.3.6 (10 Mar 2014)

  10 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> +xrootd-3.3.6.ebuild:
  Version bump

  20 Nov 2013; Patrick Lauer <patrick@gentoo.org> xrootd-3.3.4.ebuild:
  Whitespace

*xrootd-3.3.4 (19 Nov 2013)

  19 Nov 2013; Sébastien Fabbro <bicatali@gentoo.org> +xrootd-3.3.4.ebuild,
  -xrootd-3.3.1.ebuild, metadata.xml:
  Version bump

*xrootd-3.3.2 (04 Jun 2013)

  04 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> +xrootd-3.3.2.ebuild,
  -xrootd-3.2.7.ebuild, files/cmsd.initd, files/frm_purged.initd,
  files/frm_xfrd.initd:
  Version bump. Keyword amd64-linux and x86-linux. Fixed non-bashism in init
  scripts

*xrootd-3.3.1 (23 Mar 2013)

  23 Mar 2013; Sébastien Fabbro <bicatali@gentoo.org> +xrootd-3.3.1.ebuild,
  -xrootd-3.2.6.ebuild:
  Version bump

*xrootd-3.2.7 (24 Jan 2013)

  24 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> +xrootd-3.2.7.ebuild:
  Version bump

  05 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> xrootd-3.2.6.ebuild:
  add user eclass

*xrootd-3.2.6 (05 Dec 2012)

  05 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> +xrootd-3.2.6.ebuild,
  -xrootd-3.2.2.ebuild, -xrootd-3.2.4.ebuild, files/cmsd.initd,
  files/frm_purged.initd, files/frm_xfrd.initd, files/xrootd.initd,
  metadata.xml, xrootd-3.2.1.ebuild:
  Version bump. Transfering checks on /var/run and /var/spool at install time to
  run-time (bug #445882)

*xrootd-3.2.4 (29 Sep 2012)
