@@ -12,5 +12,6 @@
 </longdescription>
   <use>
     <flag name="fuse">Enable the <pkg>sys-fs/fuse</pkg> filesystem driver</flag>
+    <flag name="libevent">Use <pkg>dev-libs/libevent</pkg> for event handling</flag>
   </use>
 </pkgmetadata>
