@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/xrootd
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-libs/xrootd/ChangeLog,v 1.19 2014/06/19 18:13:17 bicatali Exp $
+
+  27 Feb 2015; Andrew Savchenko <bircoph@gentoo.org> xrootd-4.0.4.ebuild,
+  metadata.xml:
+  Add libevent dependency. This removes automagick and fixes build
+  case where libevent is present on the system, but without pthread
+  support.
 
   01 Dec 2014; Justin Lecher <jlec@gentoo.org> xrootd-4.0.4.ebuild,
   metadata.xml:
